--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -47,6 +47,9 @@
 
         @include breakpoint-up(large) {
             min-width: 540px;
+            max-width: 540px;
+            padding-left: 0;
+            padding-right: 0;
         }
     }
 
@@ -56,7 +59,16 @@
         line-height: 44px;
         margin-bottom: 24px;
 
+        @include breakpoint-up(medium) {
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 339px;
+            font-size: 48px;
+            line-height: 48px;
+        }
+
         @include breakpoint-up(large) {
+            max-width: 445px;
             font-size: 64px;
             line-height: 64px;
             margin-bottom: 34px;
